--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
+    "p5": "^0.7.2",
+    "tone": "^0.12.80",
     "vue": "^2.5.17"
   },
   "devDependencies": {
